reimport missing and minor bug improve